# DLL_Checker

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  NEW_WORKFLOW_GUIDE.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  deploy.bat  missing_report.json
include/: comparisonengine.h  dependencyscanner.h  dllcollector.h  inputvalidator.h  logger.h  mainwindow.h  pathresolver.h  peparser.h  reportgenerator.h  scanworker.h
resources/: resources.qrc  style.qss
src/: comparisonengine.cpp  dependencyscanner.cpp  dllcollector.cpp  inputvalidator.cpp  logger.cpp  main.cpp  mainwindow.cpp  pathresolver.cpp  peparser.cpp  reportgenerator.cpp  scanworker.cpp
tests/: README.md  test_peparser.cpp  tests.pro
